Fix wide block margins to ensure proper centered alignment. Adds styles file for Gallery blocks. Remove left margin on Gallery lists.

--- a/css/gutenberg-frontend-styles.css
+++ b/css/gutenberg-frontend-styles.css
@@ -335,6 +335,12 @@ hr.wp-block-separator {
   padding-left: 0;
 }
 
+/* Galleries
+--------------------------------------------- */
+.entry-content ul.wp-block-gallery {
+  margin-left: 0;
+}
+
 /* Course Maker - Shortcode Styles
 --------------------------------------------- */
 /* FEATURES
@@ -622,8 +628,8 @@ hr.wp-block-separator {
     margin-right: auto;
   }
   .full-width-content .entry-content .alignwide {
-    margin-left: -180px;
-    margin-right: -180px;
+    margin-left: -146px;
+    margin-right: -146px;
   }
   .entry-content .wp-block-columns {
     display: -ms-flexbox;
@@ -682,16 +688,16 @@ hr.wp-block-separator {
 }
 @media screen and (min-width: 1200px) {
   .full-width-content .site-container .alignwide {
-    margin-left: -180px;
-    margin-right: -180px;
+    margin-left: -146px;
+    margin-right: -146px;
     max-width: 1020px;
   }
   .entry-content .wp-block-pullquote:not(.is-style-solid-color) {
     padding: 54px 0;
   }
   .full-width-content .site-container table.alignwide {
-    margin-left: -180px;
-    margin-right: -180px;
+    margin-left: -146px;
+    margin-right: -146px;
     max-width: 1020px;
   }
 }
