--- a/develop/scss/gutenberg/partials/_frontend-tables.scss
+++ b/develop/scss/gutenberg/partials/_frontend-tables.scss
@@ -45,8 +45,8 @@ table.alignfull {
     max-width: 99vw;
     width: auto;
 	@include media($screen--l){
-	    margin-left: -180px;
-	    margin-right: -180px;
+	    margin-left: -146px;
+	    margin-right: -146px;
 	    max-width: 1020px;
 	}
 }
